--- a/main.css
+++ b/main.css
@@ -109,14 +109,11 @@ footer {
 }
 
 @keyframes glitch {
-    0% {
-        text-shadow: 0.05em 0 0 #00fffc,-0.03em -0.04em 0 #fc00ff,0.025em 0.04em 0 #fffc00
-    }
-    15% {
-        text-shadow: 0.05em 0 0 #fffc00,0.025em 0.04em 0 #00ff00;
-    }
-    100% {
-        text-shadow: 0.05em 0 0 #00ff00,0.025em 0.04em 0 #fffc00;
+    0% { text-shadow: 2px 2px #ff0000, -2px -2px #0000ff; }
+    25% { text-shadow: -2px 2px #ff0000, 2px -2px #0000ff; }
+    50% { text-shadow: -2px -2px #ff0000, 2px 2px #0000ff; }
+    75% { text-shadow: 2px -2px #ff0000, -2px 2px #0000ff; }
+    100% { text-shadow: 2px 2px #ff0000, -2px -2px #0000ff; }
     }
 }
 
@@ -125,5 +122,8 @@ footer {
         opacity: 1;
         transform: translateY(0);
     }
-}
+    ./images {
+        position: relative;
+        width: ;
+    }
 
