--- a/main.css
+++ b/main.css
@@ -123,7 +123,6 @@ footer {
         transform: translateY(0);
     }
     ./images {
-        position: relative;
-        width: ;
+        position: center;
     }
 
